feat: 명령어에 따른 흐름 기능 구현